Upgrade the publish plugin to 1.21, fix mxcommons dependencies and avoid cleaning user or vendorlib